--- a/patent-calculator/package.json
+++ b/patent-calculator/package.json
@@ -8,10 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "firebase": "^5.5.0",
-    "firebase-admin": "^6.0.0",
     "vue": "^2.5.17",
-    "vuetify": "^1.0.19"
+    "vuetify": "^1.0.19",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.0.0-beta.49",
