--- a/patent-calculator/package.json
+++ b/patent-calculator/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.17",
     "vuetify": "^1.0.19",
     "vuex": "^3.0.1"
