--- a/patent-calculator/package.json
+++ b/patent-calculator/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "npm run build && aws s3 rm s3://pascal.kiworkshop --recursive && aws s3 cp dist/ s3://pascal.kiworkshop --recursive"
   },
   "dependencies": {
     "axios": "^0.18.0",
