--- a/patent-calculator/package.json
+++ b/patent-calculator/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.5.17",
+    "vue-session": "^1.0.0",
     "vuetify": "^1.0.19",
     "vuex": "^3.0.1"
   },
