--- a/patent-calculator/package.json
+++ b/patent-calculator/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "elasticsearch": "^15.2.0",
+    "js-file-download": "^0.4.4",
     "vue": "^2.5.17",
     "vue-session": "^1.0.0",
     "vuetify": "^1.0.19",
