--- a/patent-calculator/package.json
+++ b/patent-calculator/package.json
@@ -23,7 +23,8 @@
     "@vue/cli-plugin-eslint": "^3.0.3",
     "@vue/cli-service": "^3.0.3",
     "vue-cli-plugin-vuetify": "^0.1.6",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "webpack-dev-server": "^3.1.14"
   },
   "eslintConfig": {
     "root": true,
